refactor: refactor antd import

--- a/src/editor/style/index.less
+++ b/src/editor/style/index.less
@@ -1,3 +1,4 @@
+@import './ui.less';
 @import './../mods/header/index.less';
 @import './../mods/footer/index.less';
 @import './../mods/sider-left/index.less';
